--- a/.github/workflows/iosworkflow.yml
+++ b/.github/workflows/iosworkflow.yml
@@ -16,8 +16,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Set Default Scheme
         run: |
-          scheme_list=$(xcodebuild -list -json | tr -d "\n")
-          default=$(echo $scheme_list | ruby -e "require 'json'; puts JSON.parse(STDIN.gets)['project']['targets'][0]")
+          default = NYTimesPOC
           echo $default | cat >default
           echo Defaut scheme se kaam kar rhe hain: $default
       - name: Build
