--- a/.github/workflows/iosworkflow.yml
+++ b/.github/workflows/iosworkflow.yml
@@ -16,4 +16,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Build
         run: |
-          xcodebuild clean build test -workspace NYTimesPOC.xcworkspace -scheme NYTimesPOC -destination 'platform=iOS Simulator,name=iPhone 12 Pro,OS=15.2'
+            xcodebuild -configuration Debug  -target  NYTimesPOC -sdk iphonesimulator15.0
