--- a/.github/workflows/iosworkflow.yml
+++ b/.github/workflows/iosworkflow.yml
@@ -16,4 +16,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Build
         run: |
-            xcodebuild -configuration Debug  -target  NYTimesPOC -sdk iphonesimulator15.0
+            xcodebuild -configuration Debug  -target  NYTimesPOC
