--- a/.github/workflows/iosworkflow.yml
+++ b/.github/workflows/iosworkflow.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Build and Test default scheme using any available iPhone simulator
-    runs-on: macos-latest
+    runs-on: macos-11
 
     steps:
       - name: Checkout
@@ -17,4 +17,4 @@ jobs:
       - name: Build
         run: |
             cd ..
-            xcodebuild -configuration Debug  -target  NYTimesPOC
+             run: xcodebuild test -scheme NYTimesPOC -project NYTimesPOC.xcodeproj -destination 'platform=iOS Simulator,name=iPhone 12,OS=15.0' | xcpretty && exit ${PIPESTATUS[0]}
