--- a/.github/workflows/iosworkflow.yml
+++ b/.github/workflows/iosworkflow.yml
@@ -15,6 +15,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Build
-      - run: |
-              cd..
-              xcodebuild  -scheme NYTimesPOC -project NYTimesPOC.xcodeproj -destination 'platform=iOS Simulator,name=iPhone 12,OS=15.0' | xcpretty && exit ${PIPESTATUS[0]}
+      - name: Run first python file
+        run:  cd..
+      - run: xcodebuild  -scheme NYTimesPOC -project NYTimesPOC.xcodeproj -destination 'platform=iOS Simulator,name=iPhone 12,OS=15.0' | xcpretty && exit ${PIPESTATUS[0]}
