--- a/.github/workflows/iosworkflow.yml
+++ b/.github/workflows/iosworkflow.yml
@@ -15,5 +15,4 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Build
-      - run: cd.. 
-             xcodebuild test -scheme NYTimesPOC -project NYTimesPOC.xcodeproj -destination 'platform=iOS Simulator,name=iPhone 12,OS=15.0' | xcpretty && exit ${PIPESTATUS[0]}
+      - run: xcodebuild -configuration Debug  -target  NYTimesPOC -sdk iphonesimulator15.0
