--- a/.github/workflows/iosworkflow.yml
+++ b/.github/workflows/iosworkflow.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Go back
-        run: cd ..
+        run: |
+          cd ..
+           echo "Here below:"
+           echo "Name of all teh files ${ls} "
       - name: Build
         run: xcodebuild test -scheme NYTimesPOC -project NYTimesPOC.xcodeproj -destination 'platform=iOS Simulator,name=iPhone 12,OS=15.0' | xcpretty && exit ${PIPESTATUS[0]}
