--- a/.github/workflows/iosworkflow.yml
+++ b/.github/workflows/iosworkflow.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Go back
         run: |
+           cd NYTimesPOC
            echo "Here below:"
            ls ${{ github.workspace }}
       - name: Build
